background and header

--- a/index.html
+++ b/index.html
@@ -4,10 +4,38 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/css/style.css">
+  
   <title>MoYa</title>
 </head>
 <body>
-  Hello gues!
+  <header class="header">
+    <div class="container d-flex align-items-center">
+      <a href="#" class="logo">   
+        <img src="/img/v2.01.png" class="logo" alt="logo">   
+      </a>
+      <nav class="main-header-nav">
+        <a href="#">E-mail</a>
+        <a href="#">Contact us</a>
+      </nav>
+
+      <nav class="info-header-nav">
+        <a href="#">Условия</a>
+        <a href="#">Контакты</a>
+      </nav>
+      
+    </div>
+    <!-- /container -->
+  </header>
   
+  <main class="main">
+    <section class="inner">
+      <div class="container">
+        
+      </div>
+    </section>
+  </main>
 </body>
 </html>
