--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
   <main class="main">
     <section class="inner">
       <div class="container">
-        
+        <div class="inner-call-to-action">
+          <H1 class="call-to-action-title">
+            Почему ты не стоишь этих денег
+          </H1>
+        </div>
       </div>
     </section>
   </main>
