--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
           <H1 class="call-to-action-title">
             Почему ты не стоишь этих денег
           </H1>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus dolor at nostrum doloremque facilis esse. Voluptate, possimus eius, doloremque vel dolores quos at ipsum esse accusantium ex eligendi. Ipsam, cumque.</p>
         </div>
       </div>
     </section>
