--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       </nav>
 
       <nav class="info-header-nav">
-        <a href="#">Условия</a>
-        <a href="#">Контакты</a>
+        <a href="#">properties</a>
+        <a href="#">contact</a>
       </nav>
       
     </div>
@@ -34,7 +34,7 @@
       <div class="container">
         <div class="inner-call-to-action">
           <H1 class="call-to-action-title">
-            Почему ты не стоишь этих денег
+           will This  cool page
           </H1>
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Natus dolor at nostrum doloremque facilis esse. Voluptate, possimus eius, doloremque vel dolores quos at ipsum esse accusantium ex eligendi. Ipsam, cumque.</p>
         </div>
