--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header class="header">
     <div class="container d-flex align-items-center">
       <a href="#" class="logo">   
-        <img src="/img/v2.01.png" class="logo" alt="logo">   
+        <img src="img/v2.01.png" class="logo" alt="logo">   
       </a>
       <nav class="main-header-nav">
         <a href="#">E-mail</a>
